force-app/main/default/objects/xiQ_User_Tokens__c/xiQ_User_Tokens__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Users must have access to this setting for app to work</description>
    <label>xiQ_User_Tokens</label>
</CustomObject>