force-app/main/default/objects/xiQ_User_Tokens__c/fields/IsLicensed__c.field-meta.xml
<CustomField>
    <fullName>IsLicensed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if the user has license to the app</description>
    <label>IsLicensed</label>
    <type>Checkbox</type>
</CustomField>