force-app/main/default/objects/xiQ_User_Tokens__c/fields/Notify_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_Email__c</fullName>
    <description>xiQ user&apos;s Username</description>
    <label>Notify Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>