force-app/main/default/objects/xiQ_User_Tokens__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>xiQ user&apos;s api access token</description>
    <externalId>true</externalId>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>